# xdelta-1-cmake

./: CMakeLists.txt  README.md  getopt.c  xdapply.c  xdmain.c
libedsio/: CMakeLists.txt  base64.c
